Rename project and update version in package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.kesomannen.unity-repo-project-patcher",
-  "version": "0.2.0",
-  "displayName": "REPO Project Patcher",
-  "description": "A game wrapper that generates a Unity project from R.E.P.O's build that can be playable in-editor",
-  "unity": "2022.3",
-  "unityRelease": "21f1",
+  "name": "com.kesomannen.unity-yapyap-project-patcher",
+  "version": "0.1.0",
+  "displayName": "YAPYAP Project Patcher",
+  "description": "A game wrapper that generates a Unity project from YAPYAP's build for Unity 6 URP.",
+  "unity": "6000.0",
+  "unityRelease": "0f1",
   "licensesUrl": "https://choosealicense.com/licenses/gpl-3.0/",
   "dependencies": {},
   "devDependencies": {},
