Update author name and URL in package.json

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "devDependencies": {},
   "samples": [],
   "author": {
-    "name": "Kesomannen",
+    "name": "Omniscye",
     "email": "",
-    "url": "https://kesomannen.com"
+    "url": ""
   },
   "type": "library"
 }
